tests/ui/feature-gates/feature-gate-ffi_returns_twice.stderr
error[E0658]: the `#[ffi_returns_twice]` attribute is an experimental feature
  --> $DIR/feature-gate-ffi_returns_twice.rs:4:5
   |
LL |     #[ffi_returns_twice]
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58314 <https://github.com/rust-lang/rust/issues/58314> for more information
   = help: add `#![feature(ffi_returns_twice)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
